  (Martin Pool, James Westby, #528114)

* When invoked with a range revision, ``bzr log`` doesn't show revisions
  that are not part of the ancestry anymore.
  (Vincent Ladeuil, #474807)

Improvements
************

* ``bzr commit`` will prompt before using a commit message that was
  generated by a template and not edited by the user.
  (Robert Collins, #530265)

* ``bzr missing`` read-locks the branches only once.
  (Andrew Bennetts)
  
* Index lookups in pack repositories search recently hit pack files first.  
  In repositories with many pack files this can greatly reduce the
  number of files accessed, the number of bytes read, and the number of
  read calls.  An incremental pull via plain HTTP takes half the time and
  bytes for a moderately large repository.  (Andrew Bennetts)

* Less code is loaded at startup.  (Cold-cache start time is about 10-20%
  less.)
  (Martin Pool, #553017)

Documentation
*************

API Changes
***********

Internals
*********

* ``bzrlib.commands.Command.run_direct`` is no longer needed - the pre
  2.1 method of calling run() to perform testing or direct use via the API
  is now possible again. As part of this, the _operation attribute on
  Command is now transient and only exists for the duration of ``run()``.
  (Robert Collins)

Testing
*******


bzr 2.2.0b1
###########

:2.2.0b1: Not released yet

Compatibility Breaks
********************

* BTreeGraphIndex can now take an offset to indicate that the data starts
  somewhere other than then beginning of the file. (John Arbash Meinel)

* Deleted very old hidden commands ``versionedfile-list``,
  ``weave-plan-merge``, ``weave-merge-text``.
  (Martin Pool)

* ``Repository.get_inventory_sha1()`` and ``Repository.get_revision_xml()`` 
  have been removed. (Jelmer Vernooij)

* ``Repository.get_revision_inventory()`` has been removed in favor of
  ``Repository.get_inventory()``. (Jelmer Vernooij)

* All test servers have been moved out of the bzrlib.transport hierarchy to