@@ -41,6 +41,10 @@ Improvements
   generated by a template and not edited by the user.
   (Robert Collins, #530265)
 
+* ``bzr diff`` read-locks the trees and branches only once, saving about
+  10-20ms on ``bzr diff`` in a bzr.dev tree.
+  (Andrew Bennetts)
+
 * ``bzr missing`` read-locks the branches only once.
   (Andrew Bennetts)
   
